--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongodb": "^6.21.0"
+    "mongodb": "^6.21.0",
+    "stripe": "^18.0.0"
   }
 }
